[workspace]
resolver = "2"
members = [
    "crates/conduit-core",
    "crates/conduit-engine",
    "crates/conduit-store-dibs",
    "crates/conduit-server",
    "crates/conduit-admin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.7"
http = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
russh = "0.60"
russh-sftp = "2"
regex = "1"
async-trait = "0.1"
rmcp = { version = "1.6", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.2"
parking_lot = "0.12"
dashmap = "6"
