[package]
name = "conduit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
chrono.workspace = true
async-trait.workspace = true
regex.workspace = true
chacha20poly1305.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
