[package]
name = "conduit-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
conduit-core = { path = "../conduit-core" }
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
http.workspace = true
axum.workspace = true
base64.workspace = true
russh.workspace = true
russh-sftp.workspace = true
rmcp.workspace = true
schemars.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
