[package]
name = "conduit-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "conduit-server"
path = "src/main.rs"

[dependencies]
conduit-core = { path = "../conduit-core" }
conduit-engine = { path = "../conduit-engine" }
conduit-store-dibs = { path = "../conduit-store-dibs" }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
axum.workspace = true
http.workspace = true
tower.workspace = true
tower-http.workspace = true
rmcp.workspace = true
