[package]
name = "conduit-store-dibs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
conduit-core = { path = "../conduit-core" }
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
sqlx.workspace = true
